--- a/templates/host/nav.html
+++ b/templates/host/nav.html
@@ -11,6 +11,8 @@
             <li class="active"><a href="#">主机信息监控</a></li>
             <li><a href="/disk/">磁盘分区监控</a></li>
             <li><a href="/users/">登录用户信息监控</a></li>
+            <li><a href="/diff/">配置文件差异性对比</a></li>
+
 
         </ul>
     </div>
